<resources>
    <string name="app_name">SensRec</string>
    <string name="placeholder">Username</string>
    <string name="placeholdersmart">Smartphone name</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="instructions">Instructions</string>
    <string name="play">Play</string>
    <string name="alertDialogMessage">Press OK to start playing or CANCEL to go back!</string>
    <string name="wrongKey">You pressed the wrong key, take your time! Press the green button to resume the game</string>
    <string name="notUploadKey">Some characters have not been registered, take your time! Press the green button to resume the game</string>
    <string name="resume">Resume</string>
    <string name="word">Insert word</string>
    <string name="LogUser">Insert Username</string>
    <string name="insSmartphone">Insert Smartphone Name</string>
    <string name="GO">GO</string>
    <string name="Error">Please insert all fields</string>
    <string name="noSpecial">Do not insert special characters</string>
    <string name="counters">Counters</string>
    <string name="resetCounters">Reset Counters</string>
    <string name="character">Character</string>
    <string name="nOfTouch">Number of touches</string>
    <string name="Displays">Choose the hand you will use</string>
    <string name="mode">Enter the sentence appearing on the screen during the specified time. Try not to be in a hurry and not to trespass the specified time. </string>
    <string name="attention">Attention!</string>
    <string name="resetOk">Pressing OK will set all counters to 0. Are you sure to continue?</string>
    <string name="okback">Press OK to go back</string>
    <string name="changeUser">You are changing Username, the previous Username is %1$s. By pressing OK new Username will be saved and each counter will be reset. Press CANCEL to set old Username.</string>
    <string name="interrupted">The game has been interrupted</string>
    <string name="restart">Please press OK to restart it. Wait few seconds before writing again</string>

    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="space">space</string>
</resources>
